tests/parser/fail/04-checkpoint-double-name.nx
fn brokenCheckpoint() {
    checkpoint "first" {
        run()
    } as "second"
}
